[gd_scene load_steps=7 format=3 uid="uid://cjvwkrg3385kr"]

[ext_resource type="Texture2D" uid="uid://df0ls7vt18jqb" path="res://art/opening-cg-8e-base.png" id="1_5eddi"]
[ext_resource type="Script" path="res://game/code/Endings/ending_scene.gd" id="1_nio14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h7gm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_pvssx"]
resource_name = "black_to_trans"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackPanel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_npin0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackPanel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajiva"]
_data = {
"RESET": SubResource("Animation_npin0"),
"black_to_trans": SubResource("Animation_pvssx")
}

[node name="EndingScene" type="Node2D"]
script = ExtResource("1_nio14")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(645.945, 366)
scale = Vector2(0.183726, 0.185)
texture = ExtResource("1_5eddi")

[node name="Label" type="Label" parent="."]
offset_left = 615.0
offset_top = 112.0
offset_right = 1267.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 26
text = "Thank you for playing the game jam demo of Zinnia.
The story is to be continued. 

Follow us if you want to get the latest updates.
- by Polyfization"

[node name="LiesExposedLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 190.0
offset_top = 248.0
offset_right = 327.0
offset_bottom = 271.0
text = "Lies Exposed : 0/3"

[node name="LiesToldLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 190.0
offset_top = 274.0
offset_right = 280.0
offset_bottom = 297.0
text = "Lies Told : 0"

[node name="AttachmentLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 190.0
offset_top = 299.0
offset_right = 423.0
offset_bottom = 348.0
text = "Attachment: Neutral"

[node name="BlackPanel" type="Panel" parent="."]
visible = false
z_index = 100
custom_minimum_size = Vector2(1280, 720)
offset_right = 1307.0
offset_bottom = 739.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6h7gm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajiva")
}
